--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
+    - name: Setup Swift 
+      uses: swift-actions/setup-swift@v2
+      with:
+        swift-version: "6.1.0"
     - uses: actions/checkout@v4
     - name: Build
       run: swift build -v --package-path Pokespeare
