--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,6 +18,8 @@ jobs:
           swift-version: "6.1.0"
       - name: Checkout
         uses: actions/checkout@v4
+      - name: cd into project
+        run: "cd Pokemon\ Browser"
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
