ci: add working-directory in app.yml

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,17 +18,15 @@ jobs:
           swift-version: "6.1.0"
       - name: Checkout
         uses: actions/checkout@v4
-      - name: cd into project
-        run: |
-          echo "Path >> $(ls)"
-          cd "Pokemon Browser"
       - name: Set Default Scheme
+        working-directory: Pokemon Browser
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
           default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
           echo $default | cat >default
           echo Using default scheme: $default
       - name: Build
+        working-directory: Pokemon Browser
         env:
           scheme: ${{ 'default' }}
           platform: ${{ 'iOS Simulator' }}
@@ -40,6 +38,7 @@ jobs:
           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
           xcodebuild build-for-testing -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
       - name: Test
+        working-directory: Pokemon Browser
         env:
           scheme: ${{ 'default' }}
           platform: ${{ 'iOS Simulator' }}
